* Sun Nov 29 11:27:00 CEST 1998 

Some more work in the resizing of windows

* Fri Nov 27 22:00:00 CEST 1998 

Added "To Desktop" menu.

* Fri Nov 27 7:20:00 CEST 1998 

Implemented kbgndwm's ability to read wallpapers from a directory
Yet another "fix" for kpager not to need Qt-1.41
Some bug fixes

* Wed Nov 18 7:20:00 CEST 1998 

Added Popup menus when right clicking on a window or on desktop
Added ability to resize windows by using the middle mouse button (not fully
implemented yet)

* Mon Nov 16 10:30:00 CEST 1998 

KPager now has a one-click way to work
It also highlights the window the cursor is over (not very useful right
now but will become useful next week :) )
It has some big bug fixes (they caused a core dump when setting the sticky bits
in some cases and a bug in the handling of stacking order )

* Sun Nov 15 15:00:00 CEST 1998 

Updated kpager to the new kbgndwm configure style
I still have to implement the new kbgndwm draw modes, but the
old ones already work

* Fri Nov 13 00:05:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

The arrow buttons now move whole desktop view when clicked and
still scrolls the view when pressed for a while (but faster than before)
as suggested by David Faure
Now a single click on a free area activates the desktop and also a double
click anywhere (just in case you don't have a free area)


* Mon Nov 8 7:20:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Restore latest complete configuration and window position on start (not
 only on sm)
Made pixmap draw mode the default

* Thu Oct 29 7:12:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Now kpager handles changes of number of desktops and desktop names 
Fixed a small bug with centred backgrounds
Made kpager more robust

* Sun Oct 25 9:17:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>

Arrows dissapear when not needed now
A new 2-row mode for people used to the traditional kpanel arrangement of desktops

* Fri Oct 16 7:15:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>
